welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: type color
	var t= new Array[color](getMondeHauteur());
                         ^Array1:6: error: not found: value T
		T(y)=getCouleurSol();
                ^